ignore model weights

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
+# experiments (model weight)
+experiments/
+
+# python wheels
+*whl
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
 # C extensions
 *.so
 
